Changelog
=========


1.7.1 (unreleased)
------------------

- Implement TEMP_DIRECTORY testing layer.
  [jone]

- Implement COMPONENT_REGISTRY_ISOLATION layer.
  [jone]


1.7.0 (2014-09-30)
------------------

- Add patcher for disabling quickinstaller snappshotting in tests.
  [jone]


1.6.4 (2014-05-01)
------------------

- Generic Setup uninstall test: Add a second test that uses Portal Setup for
  uninstallation. This makes sure that Portal Setup uninstallation behaves the same as
  quickinstaller uninstallation.
  [deif]


1.6.3 (2014-04-30)
------------------

- Generic Setup uninstall test: Remove is_product option, since we
  require an uninstall external method which requires the package
  to be a product anyway.
  [jone]

- Generic Setup uninstall test: test that there is an uninstall external method.
  Uninstall external methods are still necessary today for properly uninstalling
  a package.
  [jone]


1.6.2 (2014-04-30)
------------------

- Generic Setup test: use quickinstaller for uninstalling.
  [jone]


1.6.1 (2014-04-29)
------------------

- Also install profile dependencies before creating a snapshot.
  [deif]


1.6.0 (2014-04-29)
------------------

- Implement Generic Setup uninstall base test.
  [jone]


1.5.2 (2014-02-09)
------------------

- Fix ``isinstance`` calls of freezed time in ``freeze`` context manager.
  [jone]


1.5.1 (2014-02-08)
------------------

- Implement ``freeze`` context manager for freezing the time.
  [jone]


1.5.0 (2013-09-24)
------------------

- AT form page object: add schemata helper methods for testing visible
  schematas and fields.
  [jone]


1.4 (2013-08-26)
----------------

- Add custom mailhost class, remembering the sender and recipient
  of each email separately.
  [deif]

- Deprecate @javascript because Selenium with PhantomJS is too unstable.
  Removes tests and documentation, the @javascript decorator still works
  for now but needs to be imported from ftw.testing.browser.
  [jone]
