@@ -5,6 +5,9 @@ Changelog
 1.7.1 (unreleased)
 ------------------
 
+- Implement console script testing layer.
+  [jone]
+
 - Implement TEMP_DIRECTORY testing layer.
   [jone]
 
